--- a/src/App.css
+++ b/src/App.css
@@ -57,8 +57,8 @@ body {
 }
 
 .login-back-btn {
-  background: rgba(100, 33, 33, 0.8);
-  border: 1px solid rgba(172, 35, 35, 0.8);
+  background: rgba(248, 73, 73, 0.8);
+  border: 2px solid rgba(253, 29, 29, 0.8);
   color: white;
   padding: 12px 16px;
   border-radius: var(--radius-md);
@@ -76,8 +76,7 @@ body {
 }
 
 .login-back-btn:hover {
-  background: rgba(173, 61, 61, 0.9);
-  border-color: rgba(180, 40, 40, 0.8);
+  background: rgba(173, 61, 61, 0.589);
 }
 
 .login-card {
@@ -173,7 +172,7 @@ body {
   width: 100%;
   padding: 14px 24px;
   background: rgb(66, 196, 34);
-  border: 1px solid rgb(55, 231, 11);
+  border: 2px solid rgb(55, 231, 11);
   border-radius: var(--radius-md);
   color: white;
   font-size: 1rem;
@@ -186,7 +185,7 @@ body {
 }
 
 .primary-button:hover {
-  background: rgba(55, 231, 11, 0.658);
+  background: rgba(55, 231, 11, 0.411);
   box-shadow: var(--shadow-md);
 }
 
@@ -440,6 +439,10 @@ body {
   animation: slideUp 0.2s ease-out;
 }
 
+.modal-content {
+  padding: 0;
+}
+
 .profile-modal {
   max-width: 480px;
   padding: 0px 15px 15px 15px;
@@ -633,7 +636,7 @@ body {
 .menu-item {
   display: flex;
   align-items: center;
-  padding: 14px 16px;
+  padding: 5px 16px;
   background: rgba(255, 0, 0, 0.233);
   border: 1px solid var(--divider);
   border-radius: var(--radius-md);
@@ -660,7 +663,7 @@ body {
 }
 
 .menu-icon {
-  font-size: 1.2rem;
+  font-size: 1.1rem;
 }
 
 .menu-label {
@@ -856,8 +859,8 @@ body {
 }
 
 .file-grid-card:hover {
-  background: #054d6efa;
-  border: 2px solid #0279b1fa;
+  background: #03579b;
+  border: 2px solid #09a2e9fa;
   box-shadow: var(--shadow-md);
 }
 
@@ -962,11 +965,10 @@ body {
 }
 
 .action-btn {
-  background: none;
+  background: #125f9ef6;
   border: none;
   cursor: pointer;
   font-size: 1.1rem;
-  padding: 6px;
   border-radius: var(--radius-sm);
   color: var(--text-secondary);
   transition: all var(--transition-fast);
@@ -976,7 +978,7 @@ body {
 }
 
 .action-btn:hover {
-  background: rgba(255, 255, 255, 0.2);
+  background: #0189f8f6;
   color: var(--text-color);
 }
 
@@ -991,9 +993,9 @@ body {
   background: var(--card-bg);
   border: 1px solid var(--border-color);
   border-radius: var(--radius-md);
-  min-width: 180px;
+  min-width: 170px;
   box-shadow: var(--shadow-lg);
-  z-index: 100;
+  z-index: 1000;
   overflow: hidden;
   animation: slideDown 0.15s ease-out;
 }
@@ -1275,6 +1277,9 @@ body {
     padding: 20px;
     max-width: 95%;
   }
+  .modal-content {
+    padding: 0;
+  }
 
   .app-title {
     font-size: 2rem;
@@ -1289,7 +1294,7 @@ body {
   border: 1px solid var(--border-color);
   border-radius: var(--radius-md);
   box-shadow: var(--shadow-lg);
-  min-width: 180px;
+  min-width: 170px;
   z-index: 1000;
   overflow: hidden;
   animation: slideDown 0.15s ease-out;
@@ -1310,14 +1315,14 @@ body {
   display: flex;
   align-items: center;
   gap: 12px;
-  padding: 9px 16px;
+  padding: 6.5px 16px;
   background: none;
   border: none;
   border-bottom: 1px solid var(--divider);
   cursor: pointer;
   transition: all var(--transition-fast);
   color: var(--text-color);
-  font-size: 0.8rem;
+  font-size: 0.85rem;
   font-weight: 600;
   text-align: left;
   width: 100%;
@@ -2177,6 +2182,7 @@ body {
   justify-content: flex-end;
   gap: 12px;
   margin-top: 16px;
+  padding: 0px 24px 24px 24px;
 }
 
 .modal-btn {
@@ -2547,9 +2553,9 @@ body {
   z-index: 2;
 }
 
-.modal-input {
-  padding-left: 40px !important; /* Make space for icon */
-}
+/* .modal-input {
+  padding-left: 40px !important; 
+} */
 
 .input-error {
   border-color: #ff4d4f !important;
@@ -2672,25 +2678,26 @@ body {
   border-radius: var(--radius-sm);
 }
 
-/* Skeleton Card (Grid) */
 .skeleton-card {
-  display: flex;
-  flex-direction: column;
-  border: 1px solid var(--border-color);
+  display: grid;
+  grid-template-columns: 120px 1fr;
+  background: #1f67a173;
+  border: 2px solid #1970b8;
   border-radius: var(--radius-lg);
-  overflow: hidden;
   height: 100%;
-  background: rgba(255, 255, 255, 0.02);
+  width: 100%;
+  padding: 0;
+  margin: 0;
 }
 
 .skeleton-preview {
   aspect-ratio: 1;
   width: 100%;
   border-bottom: 1px solid var(--divider);
+  padding-bottom: 160px;
 }
 
 .skeleton-info {
-  padding: 13px;
   display: flex;
   flex-direction: column;
   gap: 8px;
