--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,13 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
+}
+
+@media (max-width: 800px) {
+  .tooltip {
+    display: none !important;
+  }
 }
 
 html {
