--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
   padding: 0;
   box-sizing: border-box;
   -webkit-tap-highlight-color: transparent;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
 }
 
 @media (max-width: 800px) {
@@ -27,8 +29,9 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 5px;
-  height: 10px;
+  width: 0px;
+  height: 0px;
+  background: transparent;
 }
 
 ::-webkit-scrollbar-track {
