--- a/src/App.css
+++ b/src/App.css
@@ -321,7 +321,7 @@ body {
 
 .content-area {
   flex: 1;
-  overflow-y: auto;
+  /* overflow-y: auto; */
   padding: 1rem;
   padding-top: 0;
   padding-bottom: 20px;
@@ -1959,9 +1959,13 @@ body {
   gap: 8px;
   padding: 8px 12px;
   margin-bottom: 12px;
-  background: rgba(33, 68, 100, 0.3);
-  border-radius: var(--radius-md);
+  background: rgba(33, 68, 100, 0.514);
+  border-radius: 100px;
   border: 1px solid var(--border-color);
+  position: sticky;
+  top: 85px;
+  z-index: 90;
+  backdrop-filter: blur(8px);
 }
 
 .breadcrumb-back {
@@ -1969,7 +1973,7 @@ body {
   border: none;
   color: var(--text-secondary);
   padding: 8px;
-  border-radius: var(--radius-sm);
+  border-radius: 100px;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -1996,8 +2000,8 @@ body {
   color: var(--text-muted);
   font-size: 0.9rem;
   cursor: pointer;
-  padding: 4px 8px;
-  border-radius: var(--radius-sm);
+  padding: 4px 12px;
+  border-radius: 100px;
   display: flex;
   align-items: center;
   gap: 6px;
