--- a/src/App.css
+++ b/src/App.css
@@ -718,6 +718,7 @@ body {
   font-size: 1rem;
   outline: none;
   font-family: "Inter", sans-serif;
+  min-width: 60px;
 }
 
 .search-input::placeholder {
