--- a/src/components/FolderPropertiesModal.css
+++ b/src/components/FolderPropertiesModal.css
@@ -25,7 +25,7 @@
 .folder-icon-large {
   font-size: 64px;
   color: #fbbf24; /* Folder yellow */
-  margin-bottom: 16px;
+  /* margin-bottom: 16px; */
   filter: drop-shadow(0 8px 16px rgba(251, 191, 36, 0.2));
   /* animation: pulse 2s infinite ease-in-out; */
 }
