--- a/src/App.css
+++ b/src/App.css
@@ -2899,8 +2899,11 @@ body {
   background: rgba(255, 255, 255, 0.1);
 }
 
-@media (max-width: 768px) {
+@media (max-width: 700px) {
   .file-list-meta {
+    display: none;
+  }
+  .skeleton-text-700px {
     display: none;
   }
 }
